[gd_scene load_steps=2 format=3 uid="uid://bne3f3a28lest"]

[ext_resource type="Script" path="res://scripts/multiplayer/menu.gd" id="1_ctktu"]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ctktu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -70.0
offset_right = 116.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="PrivateServer" type="Button" parent="VBoxContainer"]
texture_filter = 1
offset_right = 221.0
offset_bottom = 31.0
disabled = true
text = "Join private server
"

[node name="CreateLobby" type="Button" parent="VBoxContainer"]
texture_filter = 1
offset_top = 35.0
offset_right = 221.0
offset_bottom = 66.0
text = "Create a lobby (via Steam)
"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 70.0
offset_right = 221.0
offset_bottom = 140.0

[node name="JoinLobbyInput" type="TextEdit" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
offset_right = 221.0
offset_bottom = 35.0
placeholder_text = "Enter lobby id"

[node name="JoinLobby" type="Button" parent="VBoxContainer/VBoxContainer"]
texture_filter = 1
offset_top = 39.0
offset_right = 221.0
offset_bottom = 70.0
text = "Join a lobby (via Steam)
"

[connection signal="pressed" from="VBoxContainer/CreateLobby" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinLobby" to="." method="_on_join_lobby_pressed"]
